--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "ainavservices",
+  "version": "1.0.0",
+  "private": true,
+  "homepage": "https://dettah.github.io/ainavservices",
   "dependencies": {
     "react-responsive-carousel": "^3.2.23"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
